--- a/packages/create-svelte/shared/+checkjs/package.json
+++ b/packages/create-svelte/shared/+checkjs/package.json
@@ -4,7 +4,7 @@
 		"check:watch": "svelte-check --tsconfig ./jsconfig.json --watch"
 	},
 	"devDependencies": {
-		"typescript": "~4.6.2",
-		"svelte-check": "^2.2.6"
+		"typescript": "^4.7.2",
+		"svelte-check": "^2.7.1"
 	}
 }
