--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -12,25 +12,40 @@
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.46",
 		"chokidar": "^3.5.3",
-		"sade": "^1.7.4",
+		"sade": "^1.8.1",
 		"vite": "^2.9.9"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.22.2",
+		"@rollup/plugin-replace": "^4.0.0",
 		"@types/connect": "^3.4.35",
-		"@types/cookie": "^0.5.0",
-		"@types/marked": "^4.0.1",
+		"@types/cookie": "^0.5.1",
+		"@types/marked": "^4.0.3",
 		"@types/mime": "^2.0.3",
-		"@types/sade": "^1.7.3",
+		"@types/node": "^16.11.36",
+		"@types/sade": "^1.7.4",
 		"@types/set-cookie-parser": "^2.4.2",
 		"cookie": "^0.5.0",
+		"cross-env": "^7.0.3",
 		"devalue": "^2.0.1",
+		"eslint": "^8.16.0",
 		"kleur": "^4.1.4",
 		"locate-character": "^2.0.5",
+		"marked": "^4.0.16",
 		"mime": "^3.0.0",
-		"node-fetch": "^3.1.0",
-		"selfsigned": "^2.0.0",
+		"node-fetch": "^3.2.4",
+		"port-authority": "^1.2.0",
+		"rollup": "^2.75.3",
+		"selfsigned": "^2.0.1",
 		"set-cookie-parser": "^2.4.8",
-		"svelte": "^3.48.0"
+		"sirv": "^2.0.2",
+		"svelte": "^3.48.0",
+		"svelte-check": "^2.7.1",
+		"svelte-preprocess": "^4.10.6",
+		"svelte2tsx": "~0.5.10",
+		"tiny-glob": "^0.2.9",
+		"typescript": "^4.7.2",
+		"uvu": "^0.5.3"
 	},
 	"peerDependencies": {
 		"svelte": "^3.44.0"
