--- a/package.json
+++ b/package.json
@@ -23,36 +23,24 @@
 	},
 	"homepage": "https://github.com/sveltejs/kit#readme",
 	"devDependencies": {
-		"@changesets/cli": "^2.18.1",
-		"@playwright/test": "^1.21.0",
-		"@rollup/plugin-commonjs": "^21.0.1",
+		"@changesets/cli": "^2.22.0",
+		"@rollup/plugin-commonjs": "^21.1.0",
 		"@rollup/plugin-json": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^13.0.6",
-		"@rollup/plugin-replace": "^4.0.0",
+		"@rollup/plugin-node-resolve": "^13.3.0",
 		"@sveltejs/eslint-config": "github:sveltejs/eslint-config#v5.8.0",
 		"@svitejs/changesets-changelog-github-compact": "^0.1.1",
-		"@types/node": "^16.11.36",
-		"@typescript-eslint/eslint-plugin": "^5.5.0",
-		"@typescript-eslint/parser": "^5.5.0",
-		"cross-env": "^7.0.3",
-		"eslint": "^8.3.0",
-		"eslint-plugin-import": "^2.25.3",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"eslint": "^8.16.0",
+		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"port-authority": "^2.0.0",
-		"prettier": "^2.5.0",
-		"prettier-plugin-svelte": "^2.5.0",
-		"rimraf": "^3.0.2",
-		"rollup": "^2.60.2",
-		"sirv": "^2.0.0",
+		"prettier": "^2.6.2",
+		"rollup": "^2.75.3",
 		"svelte": "^3.48.0",
-		"svelte-check": "^2.5.0",
-		"svelte-preprocess": "^4.9.8",
-		"svelte2tsx": "~0.5.0",
 		"tiny-glob": "^0.2.9",
-		"turbo": "^1.2.12",
-		"typescript": "~4.7.2",
-		"uvu": "^0.5.2"
+		"turbo": "^1.2.14",
+		"typescript": "^4.7.2"
 	},
 	"packageManager": "pnpm@7.1.7",
 	"engines": {
