--- a/packages/adapter-netlify/package.json
+++ b/packages/adapter-netlify/package.json
@@ -34,13 +34,21 @@
 	},
 	"dependencies": {
 		"@iarna/toml": "^2.2.5",
-		"esbuild": "^0.14.29",
+		"esbuild": "^0.14.42",
 		"set-cookie-parser": "^2.4.8",
 		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
-		"@types/set-cookie-parser": "^2.4.2",
 		"@netlify/functions": "^1.0.0",
-		"@sveltejs/kit": "workspace:*"
+		"@rollup/plugin-commonjs": "^21.1.0",
+		"@rollup/plugin-json": "^4.1.0",
+		"@rollup/plugin-node-resolve": "^13.3.0",
+		"@sveltejs/kit": "workspace:*",
+		"@types/node": "^16.11.36",
+		"@types/set-cookie-parser": "^2.4.2",
+		"rimraf": "^3.0.2",
+		"rollup": "^2.75.3",
+		"typescript": "^4.7.2",
+		"uvu": "^0.5.3"
 	}
 }
