--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -29,6 +29,13 @@
 		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "workspace:*"
+		"@sveltejs/kit": "workspace:*",
+		"@types/node": "^16.11.36",
+		"playwright-chromium": "^1.22.2",
+		"port-authority": "^1.2.0",
+		"sirv": "^2.0.2",
+		"svelte": "^3.48.0",
+		"typescript": "^4.7.2",
+		"uvu": "^0.5.3"
 	}
 }
