--- a/packages/adapter-vercel/package.json
+++ b/packages/adapter-vercel/package.json
@@ -29,10 +29,12 @@
 		"check": "tsc"
 	},
 	"dependencies": {
-		"@vercel/nft": "^0.19.0",
-		"esbuild": "^0.14.29"
+		"@vercel/nft": "^0.19.1",
+		"esbuild": "^0.14.42"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "workspace:*"
+		"@sveltejs/kit": "workspace:*",
+		"@types/node": "^16.11.36",
+		"typescript": "^4.7.2"
 	}
 }
