--- a/packages/create-svelte/shared/+typescript/package.json
+++ b/packages/create-svelte/shared/+typescript/package.json
@@ -4,9 +4,9 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"typescript": "~4.6.2",
+		"typescript": "^4.7.2",
 		"tslib": "^2.3.1",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.1"
+		"svelte-check": "^2.7.1",
+		"svelte-preprocess": "^4.10.6"
 	}
 }
