--- a/packages/create-svelte/templates/default/package.json
+++ b/packages/create-svelte/templates/default/package.json
@@ -11,13 +11,13 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "workspace:*",
 		"@sveltejs/kit": "workspace:*",
-		"svelte": "^3.44.0",
-		"svelte-preprocess": "^4.9.8",
-		"typescript": "~4.6.2"
+		"svelte": "^3.48.0",
+		"svelte-preprocess": "^4.10.6",
+		"typescript": "^4.7.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/fira-mono": "^4.5.0",
+		"@fontsource/fira-mono": "^4.5.8",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.5.0"
 	}
