Convert build to Vite plugin and expose as `@sveltejs/kit/experimental/vite` (#5094)
* Expose Vite plugin as @sveltejs/kit/vite

* make svelte config optional

* Implement build

* export as experimental/vite for now

* add plugin correct number of times with or without vite.config.js

* add TODO

* don't rename dev file for now

* update API

* cleanup

* Update packages/kit/src/vite/plugin.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Revert "Update packages/kit/src/vite/plugin.js"

This reverts commit 4d600284cec19e0cb37f6cc256308b6ea875a3a1.

* enable validation plugin

* enable validation for real this time

* add validation plugin to all builds

* format

* fix plugin handling

* format

* cleanup API

* remove configFile: false

* fix validation plugin

* fix preview

* Update healthy-carrots-cross.md

* move dev/build/preview inside vite plugin

* move adapt inside build

* move all vite-related code into src/vite

* move some more stuff around

* fix some stuff

* simplify stuff

* remove unused plugins_internal

* we can now simplify stuff a bunch

* simplify

* lint

* update path in .prettierrc

* revert accidental change

* try fixing CI

* try fixing CI

* lint

* lint

* fix

* appease typescript. not sure why this started happening

* whyyy

* simplify

* simplify

* simplify

* respect user config in build

* update turbo cache

* format

* resolveJsonModule

* remove unnecessary configResolved hook

* remove unused option

* minor simplification

* simplify

* move some stuff closer to where its used

* dry some stuff out, move some stuff to buildStart

* do all config checking up-front

* remove unused print_config_conflicts

* remove unused import

* simplify merging

* remove unused import

* remove blank line

* i think these files were committed by mistake

* set env vars earlier

Co-authored-by: Ric

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -88,6 +88,9 @@
 		},
 		"./hooks": {
 			"import": "./dist/hooks.js"
+		},
+		"./experimental/vite": {
+			"import": "./dist/vite.js"
 		}
 	},
 	"types": "types/index.d.ts",
