--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -33,6 +33,7 @@
 		"locate-character": "^2.0.5",
 		"marked": "^4.0.16",
 		"mime": "^3.0.0",
+		"node-fetch": "^3.2.4",
 		"port-authority": "^1.2.0",
 		"rollup": "^2.75.3",
 		"selfsigned": "^2.0.1",
