--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           cache: pnpm
       - run: pnpm install --frozen-lockfile
       - run: cd packages/kit && pnpm build
-      - run: pnpm turbo run lint check
+      - run: pnpm turbo run lint check --force
   Tests:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 30
