[breaking] graduate `@sveltejs/kit/vite` from experimental and require `vite.config.js` (#5332)
* [breaking] graduate @sveltejs/kit/vite from experimental

* update site and tests to use vite.config.js

* Add vite.config.js to the create-svelte templates

* [breaking] require vite.config.js

* turbo can go to hell

* wtf pnpm

* revert b6b9208be5cd73ba15873a82c87568ec947a127f

* fix some turbo config

* lint

* check

* Update packages/kit/src/cli.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* [breaking] switch to vite CLI for dev, build, and preview commands

* Clarify message

* more updates to test projects

* remove svelte-kit dev/build/preview commands

* a few more fixes

* lint

* fix adapter-static tests

* docs

* update lockfile, not sure how it got borked

* lockfile

* doc typos

* bump undici

* bump @rollup/plugin-commonjs

* fix config validation

* fix #5308

* adapter-static tests

* update svelte-kit sync docs

* update svelte-kit package docs

* Revert "adapter-static tests"

This reverts commit aa7623555af1327f29746e99ec37cc654c7939b0.

* fix workspace/prepare scripts

* Revert "fix workspace/prepare scripts"

This reverts commit 9ece16ad258a3210ebd4fce1028170d7b7d56d16.

* Revert "Revert "adapter-static tests""

This reverts commit 72432bbaa79f9f8695f3e1bf7efb731d4e61090d.

* try something else

* remove debug line

* try using edge functions

* Revert "try using edge functions"

This reverts commit 5b2eebdabdf6d87650609b968b6d36c25c7ea2cb.

* remove unused file

* update gitignore so we can run vc build locally to diagnose hanging

* tweak CLI docs

* trying this once more

* doh

* use workspace dependencies

* ugh lockfile

* use src code locally, dist in CI

Co-authored-by: Rich Harris <hello@rich-harris.dev>
Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

--- a/turbo.json
+++ b/turbo.json
@@ -23,13 +23,24 @@
 			]
 		},
 		"check": {
-			"dependsOn": ["sync"],
-			"inputs": ["src/**", "types/**", ".svelte-kit/types/**", ".custom-out-dir/types/**", ".svelte-kit/tsconfig.json"],
+			"dependsOn": ["prepare"],
+			"inputs": [
+				"src/**",
+				"types/**",
+				".svelte-kit/types/**",
+				".custom-out-dir/types/**",
+				".svelte-kit/tsconfig.json"
+			],
 			"outputs": []
 		},
 		"format": {},
-		"sync": {
-			"outputs": [".svelte-kit/types/**", ".custom-out-dir/types/**"]
+		"prepare": {
+			"outputs": [
+				".svelte-kit/types/**",
+				".svelte-kit/tsconfig.json",
+				".custom-out-dir/types/**",
+				".custom-out-dir/tsconfig.json"
+			]
 		},
 		"test": {
 			"dependsOn": ["^build", "$CI", "$TURBO_CACHE_KEY"],
