--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -36,6 +36,7 @@
 		"sirv": "^2.0.2",
 		"svelte": "^3.48.0",
 		"typescript": "^4.7.2",
-		"uvu": "^0.5.3"
+		"uvu": "^0.5.3",
+		"vite": "^2.9.13"
 	}
 }
