--- a/packages/create-svelte/templates/default/package.json
+++ b/packages/create-svelte/templates/default/package.json
@@ -3,17 +3,18 @@
 	"version": "0.0.2-next.0",
 	"private": true,
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build --verbose",
+		"dev": "vite dev",
+		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview"
+		"preview": "vite preview"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "workspace:*",
 		"@sveltejs/kit": "workspace:*",
 		"svelte": "^3.48.0",
 		"svelte-preprocess": "^4.10.6",
-		"typescript": "^4.7.2"
+		"typescript": "^4.7.2",
+		"vite": "^2.9.13"
 	},
 	"type": "module",
 	"dependencies": {
