--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -12,8 +12,7 @@
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.48",
 		"chokidar": "^3.5.3",
-		"sade": "^1.8.1",
-		"vite": "^2.9.10"
+		"sade": "^1.8.1"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.22.2",
@@ -45,11 +44,13 @@
 		"svelte2tsx": "~0.5.10",
 		"tiny-glob": "^0.2.9",
 		"typescript": "^4.7.2",
-		"undici": "^5.4.0",
-		"uvu": "^0.5.3"
+		"undici": "^5.6.0",
+		"uvu": "^0.5.3",
+		"vite": "^2.9.13"
 	},
 	"peerDependencies": {
-		"svelte": "^3.44.0"
+		"svelte": "^3.44.0",
+		"vite": "^2.9.10"
 	},
 	"bin": {
 		"svelte-kit": "svelte-kit.js"
@@ -90,7 +91,7 @@
 		"./hooks": {
 			"import": "./dist/hooks.js"
 		},
-		"./experimental/vite": {
+		"./vite": {
 			"import": "./dist/vite.js"
 		}
 	},
