test: Add tests for create-svelte templates (#5322)
* test: Add tests for create-svelte templates

* fix JSDoc template

* use pretest script instead of exporting build_templates

* inherit stdio so it doesnt look like nothing is happening

* neaten

* DRY out

* rename directory for consistency with rest of codebase

* neaten

* update lockfile

* forgot pnpm doesnt like pre scripts

Co-authored-by: Rich Harris <hello@rich-harris.dev>

--- a/packages/create-svelte/package.json
+++ b/packages/create-svelte/package.json
@@ -26,10 +26,12 @@
 		"sucrase": "^3.21.0",
 		"svelte": "^3.48.0",
 		"svelte-preprocess": "^4.10.6",
-		"tiny-glob": "^0.2.9"
+		"tiny-glob": "^0.2.9",
+		"uvu": "^0.5.3"
 	},
 	"scripts": {
 		"build": "node scripts/build-templates",
+		"test": "npm run build && uvu test",
 		"check": "tsc",
 		"lint": "eslint --ignore-path .gitignore --ignore-path ../../.gitignore \"./*.js\" && npm run check-format",
 		"format": "npm run check-format -- --write",
