Include styles for dynamically imported components (#5138)
* add failing test for #5137

* partial fix for #5137

* defer gathering of styles

* fix typechecking

* try and nudge turbo into not breaking everything

* include dynamically imported styles during dev SSR

* changeset

* rename some stuff to make it clearer

* simplify, and dont follow dynamic imports from entry

* tidy up

* tidy up

* tidy up

--- a/turbo.json
+++ b/turbo.json
@@ -35,6 +35,7 @@
 		},
 		"format": {},
 		"prepare": {
+			"inputs": ["src/**", "source/**"],
 			"outputs": [
 				".svelte-kit/types/**",
 				".svelte-kit/tsconfig.json",
