test: improve ci e2e setup to include multiple browsers, optimize trace capturing (#5058)
* test: improve ci e2e setup to include multiple browsers, optimize trace capturing

* fix: action syntax

* chore: fix formatting

* fix: wait for kit started on page.goBack and page.reload, remove custom back util.

* fix: improve firefox test results, add browser to results archive name

* chore: fix format

* fix: use downloaded chromium for adapter static test too

* perf: tell vite watcher to ignore playwright output in test projects

* ci: archive all test results including retries

* chore: add comment for crude wait in test

* fix: add playwright back to root package.json so that `pnpm playwright install` works in ci scripts

* fix firefox bug, i think

* try to diagnose failure

* cross fingers, sacrifice goat

* perchance this pleaseth the webkit gods

* appease firefox, which i think scrolls to the focused element or something

* Create breezy-hairs-greet.md

Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>
Co-authored-by: Rich Harris <hello@rich-harris.dev>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,17 @@ env:
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
   TURBO_TEAM: svelte
 
+# cancel in-progress runs on new commits to same PR (gitub.event.number)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
+  cancel-in-progress: true
+
 jobs:
   Lint:
     runs-on: ubuntu-latest
+    env:
+      # not needed for linting
+      PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: "1"
     steps:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2.2.2
@@ -30,12 +38,23 @@ jobs:
       fail-fast: false
       matrix:
         node-version: [16]
-        os: [ubuntu-latest, macOS-latest, windows-2019]
+        os: [ubuntu-latest , windows-2019]
+        e2e-browser: ['chromium']
         include:
+          - node-version: 16
+            os: ubuntu-latest
+            e2e-browser: 'firefox'
+          - node-version: 16
+            os: macOS-latest
+            e2e-browser: 'safari'
           - node-version: 18
             os: ubuntu-latest
+            e2e-browser: 'chromium'
     env:
       TURBO_CACHE_KEY: ${{ matrix.os }}-${{ matrix.node-version }}
+      # Install playwright's binray under node_modules so it will be cached together
+      PLAYWRIGHT_BROWSERS_PATH: "0"
+      KIT_E2E_BROWSER: ${{matrix.e2e-browser}}
     steps:
       - run: git config --global core.autocrlf false
       - uses: actions/checkout@v3
@@ -45,15 +64,16 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: pnpm
       - run: pnpm install --frozen-lockfile
+      - run: pnpm playwright install
       - run: pnpm test
-      - name: archive test results
+      - name: Archive test results
         if: failure()
         shell: bash
-        run: find packages -type d -name test-results -not -empty | tar -czf test-results.tar.gz --exclude='*-retry*' --files-from=-
-      - name: Upload failed tests screenshots
+        run: find packages -type d -name test-results -not -empty | tar -czf test-results.tar.gz --files-from=-
+      - name: Upload test results
         if: failure()
         uses: actions/upload-artifact@v3
         with:
           retention-days: 3
-          name: test-failure-${{ github.run_id }}-${{ matrix.os }}-${{ matrix.node-version }}
+          name: test-failure-${{ github.run_id }}-${{ matrix.os }}-${{ matrix.node-version }}-${{ matrix.e2e-browser }}
           path: test-results.tar.gz
