--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -42,12 +42,12 @@
 		"@types/node": "^16.11.36",
 		"c8": "^7.11.3",
 		"compression": "^1.7.4",
-		"node-fetch": "^3.2.4",
 		"polka": "^1.0.0-next.22",
 		"rimraf": "^3.0.2",
 		"rollup": "^2.75.3",
 		"sirv": "^2.0.2",
 		"typescript": "^4.7.4",
+		"undici": "^5.6.1",
 		"uvu": "^0.5.3"
 	}
 }
