--- a/packages/adapter-cloudflare-workers/package.json
+++ b/packages/adapter-cloudflare-workers/package.json
@@ -29,6 +29,7 @@
 		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore"
 	},
 	"dependencies": {
+		"@cloudflare/workers-types": "^3.14.0",
 		"@iarna/toml": "^2.2.5",
 		"esbuild": "^0.14.42"
 	},
