Upgrade to Vite 3 (#5005)
* Upgrade to Vite 3

* this... seems to work?

* try this

* remove some more unneeded fixStacktrace options

* upgrade to 3.0.0-beta.9

* update default port

* 3.0.0 final

* 3.0.0 final for site

* vite-plugin-svelte 1.0.1

* bump rollup

* update enforced_config

* add EnforcedConfig type

* wow i did a terrible job of implementing this before

* leave windows paths as-is

* Revert "leave windows paths as-is"

This reverts commit 06de105952525f27c5e292393e71a42caef0ebf6.

* try this

* actually if anything i guess it should be this

* ugh

* fix firefox test

* add some logging that might help diagnose windows failure

* i think this might work

* more logging

* maybe this

* try to simplify logging so that stuff is slightly easier to diagnose

* argh

* Revert "argh"

This reverts commit 9e2d01780f30cb756e6f50f7fa3f3e09facc29aa.

* Revert "try to simplify logging so that stuff is slightly easier to diagnose"

This reverts commit 2a975ec0e050bc9e2472c15ab95eb2fa49f5a3e4.

* [docs] add JSDocs for Vite build process

* format

* loop over values instead with `Object.values`

* missed a closing bracket

* fix: ensure isolated testing of create-svelte with local packages (#5524)

* fix: move create-svelte test working dir out of pnpm workspae

* fix: copy-paste error, adapter-auto override

* fix: readd check command

* fix: ensure that create-svelte tests generate test apps outside our main pnpm workspace

* fix format

* fix: readd --no-frozen-lockfile to override pnpm default when CI is true

* remove logging

* enforce vite 3

Co-authored-by: Rich Harris <hello@rich-harris.dev>
Co-authored-by: Ignatius Bagus <ignatius.mbs@gmail.com>
Co-authored-by: Dominik G <dominik.goepel@gmx.de>

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo run build --filter=./packages/*",
-		"test": "turbo run test --filter=./packages/*",
+		"test": "turbo run test --filter=./packages/* --force",
 		"check": "turbo run check",
 		"lint": "turbo run lint",
 		"format": "turbo run format",
@@ -37,7 +37,7 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"playwright": "^1.23.3",
 		"prettier": "^2.6.2",
-		"rollup": "^2.75.3",
+		"rollup": "^2.75.7",
 		"svelte": "^3.48.0",
 		"tiny-glob": "^0.2.9",
 		"turbo": "^1.3.1",
