--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -10,7 +10,7 @@
 	"homepage": "https://kit.svelte.dev",
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/vite-plugin-svelte": "1.0.0-next.49",
+		"@sveltejs/vite-plugin-svelte": "^1.0.1",
 		"chokidar": "^3.5.3",
 		"sade": "^1.8.1"
 	},
@@ -33,7 +33,7 @@
 		"marked": "^4.0.16",
 		"mime": "^3.0.0",
 		"node-fetch": "^3.2.4",
-		"rollup": "^2.75.3",
+		"rollup": "^2.75.7",
 		"selfsigned": "^2.0.1",
 		"set-cookie-parser": "^2.4.8",
 		"sirv": "^2.0.2",
@@ -45,11 +45,11 @@
 		"typescript": "^4.7.4",
 		"undici": "^5.6.1",
 		"uvu": "^0.5.3",
-		"vite": "^2.9.13"
+		"vite": "^3.0.0"
 	},
 	"peerDependencies": {
 		"svelte": "^3.44.0",
-		"vite": "^2.9.10"
+		"vite": "^3.0.0"
 	},
 	"bin": {
 		"svelte-kit": "svelte-kit.js"
