--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,11 @@
 			"error",
 			{ "object": "test", "property": "only", "message": "Do not check in test.only tests." }
 		]
+	},
+	"globals": {
+		"__SVELTEKIT_ADAPTER_NAME__": true,
+		"__SVELTEKIT_APP_VERSION__": true,
+		"__SVELTEKIT_APP_VERSION_FILE__": true,
+		"__SVELTEKIT_APP_VERSION_POLL_INTERVAL__": true
 	}
 }
