--- a/packages/adapter-auto/package.json
+++ b/packages/adapter-auto/package.json
@@ -25,10 +25,9 @@
 		"adapters.js"
 	],
 	"scripts": {
-		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
+		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"format": "npm run check-format -- --write",
-		"check": "tsc",
-		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore"
+		"check": "tsc"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-cloudflare": "workspace:*",
