--- a/packages/adapter-cloudflare-workers/package.json
+++ b/packages/adapter-cloudflare-workers/package.json
@@ -23,10 +23,9 @@
 		"index.d.ts"
 	],
 	"scripts": {
-		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
+		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"format": "npm run check-format -- --write",
-		"check": "tsc",
-		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore"
+		"check": "tsc"
 	},
 	"dependencies": {
 		"@cloudflare/workers-types": "^3.14.0",
