--- a/packages/adapter-netlify/package.json
+++ b/packages/adapter-netlify/package.json
@@ -27,9 +27,8 @@
 		"build": "rimraf files && rollup -c && cp src/edge.js files/edge.js",
 		"test": "uvu src \"(spec\\.js|test[\\\\/]index\\.js)\"",
 		"check": "tsc",
-		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
+		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"format": "npm run check-format -- --write",
-		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"prepublishOnly": "npm run build"
 	},
 	"dependencies": {
