--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -19,10 +19,9 @@
 	},
 	"types": "index.d.ts",
 	"scripts": {
-		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
+		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"check": "tsc",
 		"format": "npm run check-format -- --write",
-		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"test": "uvu test test.js"
 	},
 	"dependencies": {
