--- a/packages/adapter-vercel/package.json
+++ b/packages/adapter-vercel/package.json
@@ -23,9 +23,8 @@
 		"index.d.ts"
 	],
 	"scripts": {
-		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
+		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"format": "npm run check-format -- --write",
-		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"check": "tsc"
 	},
 	"dependencies": {
