--- a/packages/amp/package.json
+++ b/packages/amp/package.json
@@ -22,8 +22,7 @@
 		"index.js"
 	],
 	"scripts": {
-		"lint": "eslint --ignore-path .gitignore \"**/*.{ts,js,svelte}\" && npm run check-format",
-		"format": "npm run check-format -- --write",
-		"check-format": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore"
+		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
+		"format": "npm run check-format -- --write"
 	}
 }
