--- a/packages/amp/package.json
+++ b/packages/amp/package.json
@@ -23,6 +23,6 @@
 	],
 	"scripts": {
 		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
-		"format": "npm run check-format -- --write"
+		"format": "npm run lint -- --write"
 	}
 }
