--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -28,7 +28,7 @@
 		"test": "echo \"tests temporarily disabled\" # c8 uvu tests",
 		"check": "tsc",
 		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
-		"format": "npm run check-format -- --write",
+		"format": "npm run lint -- --write",
 		"prepublishOnly": "npm run build"
 	},
 	"dependencies": {
