--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -21,7 +21,7 @@
 	"scripts": {
 		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"check": "tsc",
-		"format": "npm run check-format -- --write",
+		"format": "npm run lint -- --write",
 		"test": "uvu test test.js"
 	},
 	"dependencies": {
