feat: Consistent handling of environment variables (#5663)
* feat: Add env config object

* feat: Added types

* feat: Add .d.ts import to tsconfig

* feat: Generate env var dump code

* fix: imports

* fix: Remove old error mechanism

* feat: Rough edges of server-side module protection

* fix: Performance and add Vite overlay

* feat: First full draft of static environment vars

* fix unit tests

* fix: Rich is smarter than I am

* feat: Let  know about Vite mode

* feat: Added  to sync CLI

* feat: Added runtime variable support

* feat: Make server.init multicalls a noop

* feat: Set runtime env in preview

* this doesn't work?!: Set runtime env in dev

* feat: Added runtime env handler to cloudflare for testing

* Update packages/kit/src/cli.js

* Update packages/kit/src/core/sync/write_env.js

* Update packages/kit/src/core/sync/write_env.js

* Update packages/kit/src/vite/build/build_server.js

* Update packages/kit/src/core/sync/write_env.js

* make mode required

* move env/runtime to a file

* simplify write_env

* Update packages/kit/src/vite/preview/index.js

* remove unnecessary index.js suffix

* simplify

* tabs

* make init sync, make options required

* format

* cast process.env

* remove the overlay stuff, just throw an error

* just throw

* simplify traversal

* make build-time traversal more efficient

* move dev code into dev module

* always set env

* simplify

* remove hard-coded .svelte-kit

* rename env/runtime to env/platform and get it working in dev

* remove outdated comment

* docs

* App.RuntimeEnv -> App.Env

* add Env interface where necessary

* update more adapters

* changesets

* tweak changesets

* add a test

* replace doc links

* fix: Invalid js identifiers skipped

* rename modules

* fix some stuff, break some stuff

* update tests

* ok i think thats almost everything

* oops

* hide functions

* separate 

--- a/turbo.json
+++ b/turbo.json
@@ -3,14 +3,14 @@
 	"pipeline": {
 		"@sveltejs/kit#build": {
 			"dependsOn": ["^build"],
-			"inputs": ["src/**", "scripts/**", "types/**"],
+			"inputs": ["rollup.config.js", "src/**", "scripts/**", "types/**"],
 			"outputs": ["dist/**", "docs/**", "assets/**"],
 			"outputMode": "new-only"
 		},
 		"kit.svelte.dev#build": {
 			"dependsOn": ["^build", "$VERCEL", "$ENABLE_VC_BUILD"],
 			"inputs": ["src/**", "../../packages/kit/docs/**", "../../documentation/**"],
-			"outputs": [".vercel_build_output/**", ".vercel/output/**" ],
+			"outputs": [".vercel_build_output/**", ".vercel/output/**"],
 			"outputMode": "new-only"
 		},
 		"build": {
