[chore] disallow unused imports, variables, parameters, etc. (#5716)

--- a/packages/kit/tsconfig.json
+++ b/packages/kit/tsconfig.json
@@ -12,7 +12,9 @@
 			"@sveltejs/kit": ["./types/index"],
 			// internal use only
 			"types": ["./types/internal"]
-		}
+		},
+		"noUnusedLocals": true,
+		"noUnusedParameters": true
 	},
 	"include": ["scripts/**/*", "src/**/*", "types/**/*"],
 	"exclude": ["src/packaging/test/fixtures/**/*", "src/packaging/test/watch/**/*"]
