Move compress inside kit (#5822)
* move tiny-glob dependency

* add compress to builder

* replace compress with builder.compress

* add changeset

* Clarify directory type description.

Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>

* Update .changeset/cyan-radios-attend.md

Co-authored-by: Ben McCann <322311+benmccann@users.noreply.github.com>
Co-authored-by: Rich Harris <hello@rich-harris.dev>

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -12,7 +12,8 @@
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte": "^1.0.1",
 		"chokidar": "^3.5.3",
-		"sade": "^1.8.1"
+		"sade": "^1.8.1",
+		"tiny-glob": "^0.2.9"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.23.4",
