--- a/packages/migrate/tsconfig.json
+++ b/packages/migrate/tsconfig.json
@@ -3,7 +3,7 @@
 		"allowJs": true,
 		"checkJs": true,
 		"noEmit": true,
-		"noImplicitAny": true,
+		"strict": true,
 		"target": "esnext",
 		"module": "esnext",
 		"moduleResolution": "node",
