--- a/packages/create-svelte/templates/skeleton/package.json
+++ b/packages/create-svelte/templates/skeleton/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "skeleton-template",
+	"version": "0.0.1-next.0",
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "workspace:1.0.0-next.64"
 	},
