--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -39,11 +39,11 @@
 		"tiny-glob": "^0.2.9",
 		"typescript": "^4.7.4",
 		"uvu": "^0.5.3",
-		"vite": "3.0.2"
+		"vite": "^3.0.8"
 	},
 	"peerDependencies": {
 		"svelte": "^3.44.0",
-		"vite": "3.0.2"
+		"vite": "^3.0.0"
 	},
 	"bin": {
 		"svelte-kit": "svelte-kit.js"
