fix: `$env/*/private` importable in client (#6018)
* feat: Static is now not importable in dev and prod

* feat: Move `runtime_base` to utils

* feat: We're failing properly again!

* fix: Renamed env tests to be easier to find

* oops

* feat: Build-failure testing is a thing now

* fix: Format

* feat: Added dev-only tests

* fix: Make test app private

* feat: changeset

* feat: Bypassed SvelteKit start event

* fix: Better name for build errors project

* feat: Final (?) rendition of dev-only tests

* fix: Test project name

* Update packages/kit/src/core/utils.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/src/core/env.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update .changeset/funny-radios-attend.md

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/src/vite/index.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/src/vite/utils.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/src/vite/utils.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/src/vite/utils.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/src/vite/utils.js

* Update packages/kit/test/apps/dev-only/test/test.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/test/apps/dev-only/test/test.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/test/apps/dev-only/test/test.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

* Update packages/kit/src/core/env.js

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

Co-authored-by: Rich Harris <richard.a.harris@gmail.com>

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,5 +4,6 @@ packages:
   - 'packages/adapter-static/test/apps/*'
   - 'packages/kit/test/apps/*'
   - 'packages/kit/test/prerendering/*'
+  - 'packages/kit/test/meta/**'
   - 'packages/create-svelte/templates/*'
   - '!.test-tmp/**'
