--- a/packages/kit/tsconfig.json
+++ b/packages/kit/tsconfig.json
@@ -16,5 +16,6 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": true
 	},
-	"include": ["scripts/**/*", "src/**/*", "types/**/*"]
+	"include": ["scripts/**/*", "src/**/*", "types/**/*"],
+	"exclude": ["./**/write_types/test/*/_expected/**"]
 }
