--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -33,16 +33,16 @@
 		"@types/sade": "^1.7.4",
 		"@types/set-cookie-parser": "^2.4.2",
 		"marked": "^4.0.16",
-		"rollup": "^2.75.7",
+		"rollup": "^2.78.1",
 		"svelte": "^3.48.0",
 		"svelte-preprocess": "^4.10.6",
 		"typescript": "^4.7.4",
 		"uvu": "^0.5.3",
-		"vite": "^3.0.9"
+		"vite": "^3.1.0-beta.1"
 	},
 	"peerDependencies": {
 		"svelte": "^3.44.0",
-		"vite": "^3.0.0"
+		"vite": "^3.1.0-beta.1"
 	},
 	"bin": {
 		"svelte-kit": "svelte-kit.js"
