include type descriptions in package (#6416)

--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -53,7 +53,8 @@
 		"!src/core/**/fixtures",
 		"!src/core/**/test",
 		"types",
-		"svelte-kit.js"
+		"svelte-kit.js",
+		"scripts/special-types"
 	],
 	"scripts": {
 		"build": "npm run types",
