--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -10,7 +10,7 @@
 	"homepage": "https://kit.svelte.dev",
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/vite-plugin-svelte": "^1.0.4",
+		"@sveltejs/vite-plugin-svelte": "^1.0.5",
 		"cookie": "^0.5.0",
 		"devalue": "^3.1.2",
 		"kleur": "^4.1.4",
@@ -38,11 +38,11 @@
 		"svelte-preprocess": "^4.10.6",
 		"typescript": "^4.8.2",
 		"uvu": "^0.5.3",
-		"vite": "^3.1.0-beta.2"
+		"vite": "^3.1.0"
 	},
 	"peerDependencies": {
 		"svelte": "^3.44.0",
-		"vite": "^3.1.0-beta.1"
+		"vite": "^3.1.0"
 	},
 	"bin": {
 		"svelte-kit": "svelte-kit.js"
