Generate ESM functions for Netlify (#6666)

--- a/packages/adapter-netlify/package.json
+++ b/packages/adapter-netlify/package.json
@@ -34,8 +34,7 @@
 	"dependencies": {
 		"@iarna/toml": "^2.2.5",
 		"esbuild": "^0.15.6",
-		"set-cookie-parser": "^2.4.8",
-		"tiny-glob": "^0.2.9"
+		"set-cookie-parser": "^2.4.8"
 	},
 	"devDependencies": {
 		"@netlify/functions": "^1.0.0",
