bundle with rollup instead of esbuild (#6896)
* bundle with rollup instead of esbuild

* remove esbuild

* oops

* add comment

* fix package.json

--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -32,7 +32,6 @@
 		"prepublishOnly": "npm run build"
 	},
 	"devDependencies": {
-		"@rollup/plugin-json": "^4.1.0",
 		"@sveltejs/kit": "workspace:*",
 		"@types/node": "^16.11.36",
 		"c8": "^7.11.3",
@@ -45,6 +44,8 @@
 		"uvu": "^0.5.3"
 	},
 	"dependencies": {
-		"esbuild": "^0.15.7"
+		"@rollup/plugin-commonjs": "^22.0.1",
+		"@rollup/plugin-json": "^4.1.0",
+		"@rollup/plugin-node-resolve": "^14.1.0"
 	}
 }
