--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -38,7 +38,6 @@
 		"node-fetch": "^3.2.4",
 		"polka": "^1.0.0-next.22",
 		"rimraf": "^3.0.2",
-		"rollup": "^2.78.1",
 		"sirv": "^2.0.2",
 		"typescript": "^4.8.2",
 		"uvu": "^0.5.3"
@@ -46,6 +45,7 @@
 	"dependencies": {
 		"@rollup/plugin-commonjs": "^22.0.1",
 		"@rollup/plugin-json": "^4.1.0",
-		"@rollup/plugin-node-resolve": "^14.1.0"
+		"@rollup/plugin-node-resolve": "^14.1.0",
+		"rollup": "^2.78.1"
 	}
 }
