--- a/packages/adapter-vercel/package.json
+++ b/packages/adapter-vercel/package.json
@@ -21,12 +21,14 @@
 	"files": [
 		"files",
 		"index.js",
+		"utils.js",
 		"index.d.ts"
 	],
 	"scripts": {
 		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"format": "pnpm lint --write",
-		"check": "tsc"
+		"check": "tsc",
+		"test": "uvu test .spec.js"
 	},
 	"dependencies": {
 		"@vercel/nft": "^0.22.1",
@@ -35,7 +37,8 @@
 	"devDependencies": {
 		"@sveltejs/kit": "workspace:^",
 		"@types/node": "^16.18.6",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+		"uvu": "^0.5.6"
 	},
 	"peerDependencies": {
 		"@sveltejs/kit": "^1.5.0"
