fix: generate tsconfig/jsconfig correctly for library option (#9712)

--- a/packages/create-svelte/tsconfig.json
+++ b/packages/create-svelte/tsconfig.json
@@ -3,11 +3,12 @@
 		"allowJs": true,
 		"checkJs": true,
 		"noEmit": true,
-		"noImplicitAny": true,
 		"target": "esnext",
 		"module": "esnext",
 		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"strict": true,
+		"skipLibCheck": true
 	},
 	"include": ["./scripts/**/*", "./index.js", "./bin.js", "./utils.js"]
 }
