--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
 		"eslint": "^8.33.0",
 		"eslint-plugin-unicorn": "^46.0.0",
-		"playwright": "^1.29.2",
+		"playwright": "1.30.0",
 		"prettier": "^2.8.0",
 		"rollup": "^3.7.0",
 		"svelte": "^3.56.0",
