--- a/packages/create-svelte/package.json
+++ b/packages/create-svelte/package.json
@@ -16,7 +16,7 @@
 		"kleur": "^4.1.5"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
+		"@playwright/test": "1.30.0",
 		"@types/gitignore-parser": "^0.0.0",
 		"@types/prettier": "^2.7.1",
 		"@types/prompts": "^2.4.1",
