--- a/packages/adapter-static/package.json
+++ b/packages/adapter-static/package.json
@@ -27,15 +27,15 @@
 		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"check": "tsc",
 		"format": "pnpm lint --write",
-		"test": "uvu test test.js"
+		"test": "pnpm -r --workspace-concurrency 1 --filter=\"./test/**\" test"
 	},
 	"devDependencies": {
+		"@playwright/test": "1.30.0",
 		"@sveltejs/kit": "workspace:^",
 		"@types/node": "^16.18.6",
 		"sirv": "^2.0.3",
 		"svelte": "^3.56.0",
 		"typescript": "^4.9.4",
-		"uvu": "^0.5.6",
 		"vite": "^4.3.0"
 	},
 	"peerDependencies": {
