--- a/packages/adapter-netlify/package.json
+++ b/packages/adapter-netlify/package.json
@@ -26,7 +26,7 @@
 	"scripts": {
 		"dev": "rimraf files && rollup -cw",
 		"build": "rimraf files && rollup -c && cp src/edge.js files/edge.js",
-		"test": "uvu src \"(spec\\.js|test[\\\\/]index\\.js)\"",
+		"test": "vitest run",
 		"check": "tsc",
 		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"format": "pnpm lint --write",
@@ -48,7 +48,7 @@
 		"rimraf": "^5.0.0",
 		"rollup": "^3.7.0",
 		"typescript": "^4.9.4",
-		"uvu": "^0.5.6"
+		"vitest": "^0.31.0"
 	},
 	"peerDependencies": {
 		"@sveltejs/kit": "^1.5.0"
