--- a/packages/adapter-node/package.json
+++ b/packages/adapter-node/package.json
@@ -26,7 +26,7 @@
 	"scripts": {
 		"dev": "rimraf files && rollup -cw",
 		"build": "rimraf files && rollup -c",
-		"test": "echo \"tests temporarily disabled\" # c8 uvu tests",
+		"test": "echo \"tests temporarily disabled\" # c8 vitest run",
 		"check": "tsc",
 		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"format": "pnpm lint --write",
@@ -41,7 +41,7 @@
 		"rimraf": "^5.0.0",
 		"sirv": "^2.0.3",
 		"typescript": "^4.9.4",
-		"uvu": "^0.5.6"
+		"vitest": "^0.31.0"
 	},
 	"dependencies": {
 		"@rollup/plugin-commonjs": "^25.0.0",
