--- a/packages/adapter-vercel/package.json
+++ b/packages/adapter-vercel/package.json
@@ -28,7 +28,7 @@
 		"lint": "prettier --check . --config ../../.prettierrc --ignore-path .gitignore",
 		"format": "pnpm lint --write",
 		"check": "tsc",
-		"test": "uvu test .spec.js"
+		"test": "vitest run"
 	},
 	"dependencies": {
 		"@vercel/nft": "^0.22.6",
@@ -38,7 +38,7 @@
 		"@sveltejs/kit": "workspace:^",
 		"@types/node": "^16.18.6",
 		"typescript": "^4.9.4",
-		"uvu": "^0.5.6"
+		"vitest": "^0.31.0"
 	},
 	"peerDependencies": {
 		"@sveltejs/kit": "^1.5.0"
