--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -38,8 +38,8 @@
 		"svelte": "^3.56.0",
 		"svelte-preprocess": "^5.0.3",
 		"typescript": "^4.9.4",
-		"uvu": "^0.5.6",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"vitest": "^0.31.0"
 	},
 	"peerDependencies": {
 		"svelte": "^3.54.0",
@@ -66,7 +66,7 @@
 		"test:integration": "pnpm -r --workspace-concurrency 1 --filter=\"./test/**\" test",
 		"test:cross-platform:dev": "pnpm -r --workspace-concurrency 1 --filter=\"./test/**\" test:cross-platform:dev",
 		"test:cross-platform:build": "pnpm test:unit && pnpm -r --workspace-concurrency 1 --filter=\"./test/**\" test:cross-platform:build",
-		"test:unit": "uvu src \"(spec\\.js|test[\\\\/]index\\.js)\"",
+		"test:unit": "vitest --config kit.vitest.config.js run",
 		"postinstall": "node postinstall.js"
 	},
 	"exports": {
