chore: bump vite and devalue (#9933)
* bump vite and devalue

* update templates

* merge master

* fix test

---------

Co-authored-by: Rich Harris <git@rich-harris.dev>

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,9 @@
 	"ignoreDeps": [
 		"esbuild",
 		"rollup",
-		"typescript"
+		"typescript",
+		"playwright",
+		"@playwright/test"
 	],
 	"ignorePaths": [
 		"**/create-svelte/shared/**",
