--- a/renovate.json
+++ b/renovate.json
@@ -27,11 +27,9 @@
 				"vite"
 			],
 			"matchUpdateTypes": [
-				"minor",
-				"patch",
-				"pin",
-				"digest"
-			]
+				"major"
+			],
+			"enabled": false
 		}
 	]
 }
