--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
 		"@rollup/plugin-commonjs": "^25.0.0",
 		"@rollup/plugin-json": "^6.0.0",
 		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@sveltejs/eslint-config": "^6.0.2",
 		"@svitejs/changesets-changelog-github-compact": "^1.1.0",
 		"@typescript-eslint/eslint-plugin": "^5.53.0",
-		"eslint": "^8.33.0",
+		"eslint": "^8.40.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-svelte": "^2.28.0",
 		"eslint-plugin-unicorn": "^47.0.0",
 		"playwright": "1.30.0",
 		"prettier": "^2.8.0",
